# chihiro_fujisaki_discord_bot

./: .env_example  .gitignore  Cargo.toml  rustfmt.toml  todo.txt
chihiro_fujisaki/: Cargo.toml
chihiro_fujisaki-alter_ego/: Cargo.toml
chihiro_fujisaki-alter_ego/src/: lib.rs
chihiro_fujisaki-alter_ego/src/aliases/: error_result.rs  mod.rs
chihiro_fujisaki-alter_ego/src/alter_ego/: identify_message.rs  mod.rs  summon.rs
chihiro_fujisaki-alter_ego/src/database/: mod.rs  new.rs  select_message.rs
chihiro_fujisaki-alter_ego/src/extensions/row/: mod.rs  try_into_message.rs
chihiro_fujisaki-alter_ego/src/rows/message/: mod.rs  try_from_row.rs
chihiro_fujisaki/src/: main.rs
chihiro_fujisaki/src/aliases/: mod.rs
chihiro_fujisaki/src/chihiro_fujisaki/: mod.rs  summon.rs
chihiro_fujisaki/src/events/: mod.rs
src/: chihiro_fujisaki.rs  main.rs
src/aliases/: error_result.rs
src/events/: on_message_creation.rs
